--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-$blue_1: #2E58FF;
-$blue_2: #070D59;
-$blue_3: #B9DCFF;
-$blue_4: #D1E7FF;
-$white: #FFFFFF;
-$orange: #EE6F57;
-$background: #EFF5FF;
+$blue_1: #2e58ff;
+$blue_2: #070d59;
+$blue_3: #b9dcff;
+$blue_4: #d1e7ff;
+$white: #ffffff;
+$orange: #ee6f57;
+$background: #eff5ff;
 /* Fondo */
 
 body {
@@ -58,7 +58,7 @@ header {
     p {
       color: #333;
       font-weight: 400;
-      font-size: 1.6rem
+      font-size: 1.6rem;
     }
   }
   .header_search {
@@ -73,6 +73,33 @@ header {
     .header_photos_woman {
       img {
         height: 500px;
+      }
+    }
+  }
+}
+
+.box_main {
+  margin: 80px 0;
+  .box_main_title {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+    h1 {
+      color: $orange;
+      font-size: 2rem;
+      font-weight: 600;
+      position: relative;
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 4px;
+        width: 50%;
+        background-color: $orange;
+        left: 25%;
+        right: 25%;
+        bottom: -15px;
+        border-radius: 20px;
       }
     }
   }
