--- a/sass/style.scss
+++ b/sass/style.scss
@@ -90,11 +90,10 @@ header {
 
 .box_main {
   margin: 80px 0;
-
   .box_main_title {
     display: flex;
     justify-content: center;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
 
     h1 {
       position: relative;
@@ -126,33 +125,37 @@ header {
       border-radius: 20px;
       transition: all 0.3s ease-out;
       cursor: pointer;
-      &:hover  {
+
+      &:hover {
         transform: scale(1.1);
+
         .link {
-          
-           .bx-right-arrow-alt {
-            visibility: visible;
-            opacity: 1;
+          .bx-right-arrow-alt {
             left: 0;
+            opacity: 1;
             width: 20px;
+            visibility: visible;
           }
         }
       }
+
       .video {
         height: 230px;
         background-color: #ddd;
         margin-bottom: 20px;
       }
+
       a.link {
         position: relative;
         transition: all 0.3s ease-out;
+
         .bx-right-arrow-alt {
-          visibility: hidden;
           position: relative;
-          opacity: 0;
-          left: -20px;
-          width: 0;
           top: 2.5px;
+          left: -20px;
+          opacity: 0;
+          width: 0;
+          visibility: hidden;
         }
       }
 
@@ -160,19 +163,19 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-  
+
         .title {
           h2 {
             color: $blue_2;
             text-transform: capitalize;
           }
         }
-  
+
         .clicks {
           ul {
             display: flex;
             margin-bottom: 0;
-  
+
             li {
               button {
                 border: none;
@@ -183,9 +186,15 @@ header {
             }
           }
         }
-  
+
       }
 
     }
   }
+}
+
+footer {
+  margin-top: 180px;
+  min-height: 400px;
+  background-color: $blue_2;
 }
