--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@ $blue_4: #d1e7ff;
 $white: #ffffff;
 $orange: #ee6f57;
 $background: #eff5ff;
+$input-btn-focus-box-shadow: none;
 
 body {
   font-family: 'Barlow', serif !important;
@@ -51,6 +52,9 @@ header {
   background-color: $background;
 
   .header_textos {
+    margin: 60px 0 30px;
+    letter-spacing: -0.2px;
+
     h6 {
       color: $blue_2;
       font-size: 2.5rem;
@@ -61,26 +65,65 @@ header {
       color: $blue_1;
       font-size: 3.5rem;
       font-weight: 600;
+      line-height: 2.8rem;
     }
 
     p {
-      color: #333;
-      font-size: 1.6rem;
+      color: #a1a1a1;
+      font-size: 1.4rem;
       font-weight: 400;
     }
   }
 
   .header_search {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width: 60%;
+    margin: 0 auto;
+
     .input_search {
-      width: 50%;
-      padding: 15px;
+      width: 100%;
+      padding: 11px 18px;
       border: none;
       border-radius: 60px;
+      font-size: 1.2rem;
+
+      &:focus {
+        border-color: none !important;
+        outline-style: none !important;
+      }
+    }
+
+    .btnSearch {
+      position: absolute;
+      right: -1px;
+      width: 50px;
+      height: 50px;
+      border: none;
+      background-color: $orange;
+      border-radius: 100%;
+      transition: all 0.2s ease-in;
+
+      &:hover {
+        background-color: #ff876f;
+      }
+
+      i {
+        position: relative;
+        top: 2px;
+        color: #fff;
+        font-size: 1.6rem;
+        font-weight: 600;
+      }
     }
   }
 
   .header_photos {
     .header_photos_woman {
+      display: flex;
+      justify-content: center;
+
       img {
         height: 500px;
       }
@@ -90,6 +133,7 @@ header {
 
 .box_main {
   margin: 80px 0;
+
   .box_main_title {
     display: flex;
     justify-content: center;
