--- a/sass/style.css
+++ b/sass/style.css
@@ -141,6 +141,8 @@ header .header_photos .header_photos_woman_circles {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 header .header_photos .header_photos_woman_circles .circle, header .header_photos .header_photos_woman_circles .circle_1, header .header_photos .header_photos_woman_circles .circle_2, header .header_photos .header_photos_woman_circles .circle_3 {
@@ -148,11 +150,52 @@ header .header_photos .header_photos_woman_circles .circle, header .header_photo
   border-radius: 100%;
 }
 
+header .header_photos .header_photos_woman_circles .moveCirce, header .header_photos .header_photos_woman_circles .circle_1, header .header_photos .header_photos_woman_circles .circle_2, header .header_photos .header_photos_woman_circles .circle_3 {
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
 header .header_photos .header_photos_woman_circles .circle_1 {
   width: 300px;
   height: 300px;
   background-color: #2e58ff;
   z-index: 3;
+  -webkit-animation-name: moveCircleIn_1;
+          animation-name: moveCircleIn_1;
+}
+
+@-webkit-keyframes moveCircleIn_1 {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(10px, 20px);
+            transform: translate(10px, 20px);
+  }
+  to {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@keyframes moveCircleIn_1 {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(10px, 20px);
+            transform: translate(10px, 20px);
+  }
+  to {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
 }
 
 header .header_photos .header_photos_woman_circles .circle_2 {
@@ -160,6 +203,38 @@ header .header_photos .header_photos_woman_circles .circle_2 {
   height: 360px;
   background-color: #b9dcff;
   z-index: 2;
+  -webkit-animation-name: moveCircleIn_2;
+          animation-name: moveCircleIn_2;
+}
+
+@-webkit-keyframes moveCircleIn_2 {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(-10px, -20px);
+            transform: translate(-10px, -20px);
+  }
+  to {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@keyframes moveCircleIn_2 {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(-10px, -20px);
+            transform: translate(-10px, -20px);
+  }
+  to {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
 }
 
 header .header_photos .header_photos_woman_circles .circle_3 {
@@ -167,6 +242,38 @@ header .header_photos .header_photos_woman_circles .circle_3 {
   height: 420px;
   background-color: #d1e7ff;
   z-index: 1;
+  -webkit-animation-name: moveCircleIn_3;
+          animation-name: moveCircleIn_3;
+}
+
+@-webkit-keyframes moveCircleIn_3 {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(20px, 10px);
+            transform: translate(20px, 10px);
+  }
+  to {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@keyframes moveCircleIn_3 {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(20px, 10px);
+            transform: translate(20px, 10px);
+  }
+  to {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
 }
 
 .box_main {
