--- a/sass/style.scss
+++ b/sass/style.scss
@@ -324,6 +324,14 @@ header {
                 color: $blue_3;
                 font-size: 1.5rem;
                 background-color: transparent;
+
+                &:hover {
+                  color: $blue_1;
+                }
+
+                &:active {
+                  color: $blue_1;
+                }
               }
             }
           }
